syntax = "proto3";

option java_multiple_files = true;
option java_package = "mx.jovannypcg.grpcclient.messages";

package mx.jovannypcg.grpcserver.messages;

message Repository {
    string name = 1;
    string description = 2;
    int64  starts = 3;
    float  code_frequency = 4;
    map<string, int32> language_contributions = 5;
    string avatar = 6;
    string url = 7;
}

message EnrollmentResponse {
    bool ack = 1;
}

message Ping {
    int32 ball = 1;
}

message Pong {
    int32 ball = 1;
}
